--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.testapp" >
+    package="fr.seven.mathgame" >
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
@@ -15,8 +15,9 @@
         android:theme="@style/Theme.TestApp"
         tools:targetApi="31" >
         <activity
-            android:name=".MainActivity"
-            android:exported="true" >
+            android:name="fr.seven.mathgame.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
