--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 
 buildscript {
+    ext.kotlin_version = '1.7.0'
 
     repositories {
 
         // Check that you have the following line (if not, add it):
 
-        google()  // Google's Maven repository
+        google()
+        mavenCentral()  // Google's Maven repository
 
     }
 
@@ -15,6 +17,7 @@ buildscript {
         // Add this line
 
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
     }
 
