--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="fr.seven.mathgame" >
+    package="fr.seven.mathgame">
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -14,7 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".MatchmakingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JeuMultiActivity"
+            android:exported="false" />
         <activity
             android:name=".activity_factorielle"
             android:exported="false" />
@@ -110,7 +116,7 @@
         <activity
             android:name=".StartActivity"
             android:exported="true"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -120,9 +126,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
