--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,3 +56,12 @@ dependencies {
 }
 repositories {
 }
+
+android {
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+}
