--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,7 +26,7 @@ jobs:
       run: ./gradlew build
       
       
-    - uses: "Matheo-bis/Projet-fin-annee-groupe-7@latest"
+    - uses: "Matheo-bis/Projet-fin-annee-groupe-7"
       with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
